now admin and manager can see unpaid orders and also can proceed the oders with unpaid payment methos

--- a/templates/dashboards/account/verify_payment.html
+++ b/templates/dashboards/account/verify_payment.html
@@ -1443,6 +1443,7 @@
                         <option value="cash">Cash</option>
                         <option value="online" selected>Online</option>
                         <option value="card">Credit/Debit Card</option>
+                        <option value="not_paid">Not Paid</option>
                     </select>
                 </div>
 
