--- a/templates/dashboards/account/verify_payment.html
+++ b/templates/dashboards/account/verify_payment.html
@@ -1986,7 +1986,7 @@
                 li.className = 'invoice-item';
                 li.innerHTML = `
                     <div class="invoice-header">
-                        <span>❑ ${invoiceObj.number}</span>
+                        <span>❑ ${invoiceObj.main_id}</span>
                         <div class="invoice-id-row">
                         <span style="font-size:0.9em;color:#666;" id="invoice_date_1">${invoiceObj.date}</span>
 
@@ -2146,7 +2146,7 @@
                         
 
                         <div class="next-to-transport-container">
-                            <button class="next-to-transport-btn" onclick="confirmAndStart('${invoiceObj.number}','${invoiceObj.amount_paid}','${invoiceObj.grand_total}')">
+                            <button class="next-to-transport-btn" onclick="confirmAndStart('${invoiceObj.main_id}','${invoiceObj.amount_paid}','${invoiceObj.grand_total}')">
                                 Payment Confirm  
                             </button>
                         </div>
