--- a/templates/dashboards/sales/cancel_orders.html
+++ b/templates/dashboards/sales/cancel_orders.html
@@ -2057,6 +2057,7 @@
                 const products = Array.isArray(inv.products) ? inv.products : [];
                 // Map backend fields to frontend expected fields
                 const invoiceObj = {
+                    main_id : inv.id,
                     number: inv.invoice_number,
                     date: inv.created_at,
                     customer: inv.customer + ', ' + inv.mobile,
@@ -2083,7 +2084,6 @@
                     transport_name: inv.transport_name,
                     transport_city: inv.transport_city,
                     transport_days: inv.transport_days,
-                    transport_charges: inv.transport_charges,
                     transport_pincode: inv.transport_pincode
                 };
                 const li = document.createElement('li');
@@ -2091,7 +2091,7 @@
                 li.innerHTML = `
                 
                     <div class="invoice-header">
-                        <span>❑ ${invoiceObj.number}</span>
+                        <span>❑ ${invoiceObj.main_id}</span>
                         <div class="invoice-id-row">
                         <span style="font-size:0.9em;color:#666;" id="invoice_date_1">${invoiceObj.date}</span>
 
@@ -2172,11 +2172,6 @@
                             <div class="info-group">
                                 <span class="label">Pincode</span>
                                 <span class="value">${invoiceObj.transport_pincode}</span>
-                            </div>
-
-                            <div class="info-group">
-                                <span class="label">Charges</span>
-                                <span class="value charges-value">₹${invoiceObj.transport_charges}</span>
                             </div>
 
                             <div class="info-group">
